[package]
name = "livesort"
version = "0.2.0"
authors = ["Alex Sayers <alex@asayers.com>"]
description = "Like 'sort' but with live preview"
edition = "2018"
license = "Unlicense"
readme = "README"
repository = "https://git.sr.ht/~asayers/livesort"

[dependencies]
crossterm = "0.19.0"
structopt = "0.3.21"
