[package]
name = "livesort"
version = "0.4.1"
authors = ["Alex Sayers <alex@asayers.com>"]
description = "Like 'sort' but with live preview"
edition = "2018"
license = "Unlicense"
readme = "README.md"
repository = "https://git.sr.ht/~asayers/livesort"

[dependencies]
bpaf = { version = "0.9.15", features = ["derive"] }
crossterm = "0.28.1"
liveterm = "0.3.0"
